--- a/src/content/posts/translations/lands-lords-ladies.mdx
+++ b/src/content/posts/translations/lands-lords-ladies.mdx
@@ -79,7 +79,7 @@ cover: ~assets/covers/lands-lords-ladies.png
 
 **Графство.** Графства меньше герцогств, но всё равно считаются значительными земельными участками. Они часто предоставляются в качестве феода влиятельным и верным вассалам: графам или графиням. Типичное графство имеет площадь около 500 квадратных миль и состоит примерно из 63 маноров, но они могут быть как маленькими — 160 квадратных миль (20 маноров), так и большими — 800 квадратных миль (100 маноров). Граф редко владеет графством, которым он управляет, поскольку в большинстве случаев они являются вассалами герцогов, но около 10% земель, не принадлежащих королю, принадлежат нескольким графам.
 
-**Барония.** Самым маленьким феодом в дворянстве является барония, управляемая бароном или баронессой. Практически все бароны являются вассалами другого человека, будь то государь, герцог или даже граф. Типичное баронство имеет площадь около 90 квадратных миль и состоит из 11 маноров. Как и в случае с другими феодами, существует большой диапазон размеров — от 15 до 120 квадратных миль и от 2 до 15 маноров.
+**Баронство** Самым маленьким феодом в дворянстве является баронство, управляемая бароном или баронессой. Практически все бароны являются вассалами другого человека, будь то государь, герцог или даже граф. Типичное баронство имеет площадь около 90 квадратных миль и состоит из 11 маноров. Как и в случае с другими феодами, существует большой диапазон размеров — от 15 до 120 квадратных миль и от 2 до 15 маноров.
 
 ### Джентри
 Джентри — это довольно большая группа людей в феодальной структуре, являющихся земельными вассалами, но не являются членами пэрства. Их принято делить на рыцарей или джентльменов и леди. Все члены джентри владеют, как правило, феоды из 1-2 манора и всегда являются вассалами того, кто предоставил им свои земли.
@@ -559,14 +559,16 @@ cover: ~assets/covers/lands-lords-ladies.png
 
 **Придворные.** Придворные — это люди, уполномоченные дворянами управлять различными аспектами жизни маноров. Они находятся под надзором распорядителя, но именно они занимаются повседневными делами манора, в котором служат. В каждом из маноров будет свой набор придворных, а сам лорд будет наведываться туда не реже раза в год. Всего существует пять различных должностей, хотя в небольших манорах один человек может занимать несколько должностей, а некоторые должности просто не заняты из-за отсутствия необходимости. В зависимости от размера манора придворные так же часто становятся йоменами, как и нет.
 
-- Бейлиф является главой манора в отсутствие дворянина или распорядителя. Они следят за работой всего манора, собирают все налоги, штрафы и прочее.
-- Патрульный отвечает за поддержание мира и соблюдение законов, а также следит за исполнением крепостными трудовых обязанностей.
-- Смотритель ферм — это придворный, ответственный за надзор за сельскохозяйственными владениями лорда. Они организовывают и обеспечивают работой фермеров, а также следят за скотом и пастбищами.
-- Дозорный нанимается для присмотра за землями за пределами поместья. Он следит за лесами и землями на границе дворянских владений, высматривая угрозы, браконьеров или любые другие недуги.
-- Камердинер — последний из придворных, возглавляющий домашний персонал лорда или леди. Все, что происходит в поместье, находится в ведении камердинера — и убранство, и трапезы, и даже досужие сплетни, распространяемые слугами.
+- **Бейлиф** является главой манора в отсутствие дворянина или распорядителя. Они следят за работой всего манора, собирают все налоги, штрафы и прочее.
+- **Патрульный** отвечает за поддержание мира и соблюдение законов, а также следит за исполнением крепостными трудовых обязанностей.
+- **Смотритель ферм** — это придворный, ответственный за надзор за сельскохозяйственными владениями лорда. Они организовывают и обеспечивают работой фермеров, а также следят за скотом и пастбищами.
+- **Дозорный** нанимается для присмотра за землями за пределами поместья. Он следит за лесами и землями на границе дворянских владений, высматривая угрозы, браконьеров или любые другие недуги.
+- **Камердинер** — последний из придворных, возглавляющий домашний персонал лорда или леди. Все, что происходит в поместье, находится в ведении камердинера — и убранство, и трапезы, и даже досужие сплетни, распространяемые слугами.
 
 **Опытный наемник.** Примерами таких наемников могут служить цирюльники, врачи, егеря, портные, капитаны стражи и любые другие обученные специалисты, которые предлагают услуги или знания, полезные для дворян. Как правило, любому опытному наемнику платят, и он будет жить в поместье и путешествовать с лордом или леди.
+
 **Страж/солдат.** Эти люди прошли небольшое обучение и были экипированы лордом в простые доспехи с оружием, чтобы обеспечить безопасность поместья, деревни и всего манора в целом. Эти люди не являются закаленной боевой силой, хотя они немного лучше обычных призывников, и они подготовлены использовать оборонительные сооружения манора для защиты от налетчиков и бандитов.
+
 **Слуга.** Самая распространенная должность в штате лорда. Слуги нужны для всего: от батраков до горничных, от прислуги до пастухов и для любых других работ, которые требуются лорду или леди. Обычно в поместье лорда или леди постоянно работает дюжина слуг, а в каждом маноре — 1-2 слуги для помощи придворным. Все остальные потребности в выполняют крепостные крестьяне манора.
 
 ### Милостыня
@@ -575,7 +577,7 @@ cover: ~assets/covers/lands-lords-ladies.png
 Средний дворянин отдает около 2 % своего дохода в качестве милостыни бедным в своих манорах.
 
 
-<Aside >
+<Aside>
 
 ### Яллис — Траты
 Будучи членом джентри, лорд Яллиса платит лишь 280 золотых за различные светские мероприятия и 750 золотых своему сеньору в качестве щитовых денег. Его большое поместье обходится ему примерно в 800 золотых в год, а также около 110 золотых от отдаёт в качестве милостыни.
@@ -587,10 +589,17 @@ cover: ~assets/covers/lands-lords-ladies.png
 Общий доход лорда составляет в среднем 4 894 золотых, в то время как его годовые расходы - около 4 660 золотых. Оставшиеся 234 золотых часто откладываются на черный день, используются для финансирования улучшений поместья, а также на дополнительные светские мероприятия, чтобы усилить влияние и благосклонность лорда в королевстве.
 </Aside>
 
-**Источники:** В дополнение к нижеперечисленным источникам, я хотел бы поблагодарить моих друзей и родственников за то, что они поделились своими знаниями и опытом жизни на ферме.
+---
+
+## Источники
+
+В дополнение к нижеперечисленным источникам, я хотел бы поблагодарить моих друзей и родственников за то, что они поделились своими знаниями и опытом жизни на ферме.
+
 - Блог "[Жизнь в Средневековье](https://cdalebrittain.blogspot.com)" от C. Dale Brittain
 - [Справочный сайт](https://lordsandladies.org) по Средневековью
 - Блог "[Дао Подземелий и Драконов](https://tao-dnd.blogspot.com)" от Alexis Smolensk
 - "[Магическое средневековое общество: Западная Европа](https://www.dmsguild.com/product/2018/A-Magical-Medieval-Society-Western-Europe)" от Joseph Browning и Suzi Yee
 - "[Зерно в золото](https://preview.drivethrurpg.com/en/product/13113/Grain-Into-Gold)" от John G. Josten
 - "[Средневековая демография — это просто](https://archive.org/details/medieval-demographics-made-easy/page/n5/mode/2up)" от S. John Ross
+
+---
