--- a/src/content/posts/core-d20/bestiary-zombie-template.mdx
+++ b/src/content/posts/core-d20/bestiary-zombie-template.mdx
@@ -8,7 +8,7 @@ tags:
   - D&D 5e
   - Шаблоны
   - Шаблон
-  - Скелет
+  - Зомби
 ---
 
 ## ШАБЛОН ЗОМБИ
@@ -41,6 +41,6 @@ tags:
 
 **Природа нежити.** Зомби не нуждается в воздухе, еде, питье и сне.
 
-**Действия и способности.** Зомби теряет все способности к заклинаниям и любые действия, создающие магические эффекты.
+**Действия и способности.** Зомби теряет все особенности, позволяющие сотворять заклинания. и любые действия, создающие магические эффекты.
 
-**Действия.** Зомби может получить атаки захвата и укуса зомби, если базовое существо обладает способностью захвата и укуса. Если у существа есть мультиатака, оно может заменить атаки оружием в своей мультиатаке на захват или укус. Обе атаки используют силу для атаки и бросков урона. Захват наносит 1д6 дробящего урона плюс 1к6 за каждую категорию размера выше среднего. Укус наносит 1d10 колющего урона плюс 1d10 за каждую категорию размера выше среднего. КС побега при захвате зомби равен его КС маневра. Зомби теряет все атаки дальнего боя, требующие использования оружия сложнее камня. Он также теряет все легендарные действия и бонусные действия.
+**Действия.** Зомби может получить атаки захвата и укуса зомби, если базовое существо обладает способностью захвата и укуса. Если у существа есть мультиатака, оно может заменить атаки оружием в своей мультиатаке на захват или укус. Обе атаки используют силу для атаки и бросков урона. Захват наносит 1к6 дробящего урона плюс 1к6 за каждую категорию размера выше среднего. Укус наносит 1к10 колющего урона плюс 1к10 за каждую категорию размера выше среднего. КС побега при захвате зомби равен его КС приемов. Зомби теряет все дальнобойные атаки, требующие использования оружия сложнее камня. Он также теряет все легендарные действия и бонусные действия.
