--- a/src/content/posts/core-d20/bestiary-skeleton-template.mdx
+++ b/src/content/posts/core-d20/bestiary-skeleton-template.mdx
@@ -19,7 +19,9 @@ tags:
 
 **Показатели характеристик.** Показатели умственных характеристик скелета снижаются до следующих значений (если они еще не снизились): Инт 6 (-2), Муд 8 (-1), Хар 5 (-3).
 
-**Навыки.** Скелет теряет все навыки.
+**Навыки.** Скелет теряет все владения навыками.
+
+**Спасброски.** Скелет теряет все владения спасбросками.
 
 **Устойчивость.** Скелет получает устойчивость к рубящему урону.
 
