--- a/src/content/posts/core-d20/bestiary-zombie-template.mdx
+++ b/src/content/posts/core-d20/bestiary-zombie-template.mdx
@@ -27,7 +27,7 @@ tags:
 
 **Иммунитет к урону.** Зомби невосприимчив к урону ядом.
 
-**Иммунитет к состояниям** Зомби невосприимчив к состоянию "отравлен".
+**Иммунитет к состояниям.** Зомби получает иммунитет к истощению и состоянию "отравлен".
 
 **Чувства.** Зомби получает способность видеть в темноте на расстоянии 60 футов.
 
@@ -41,6 +41,6 @@ tags:
 
 **Природа нежити.** Зомби не нуждается в воздухе, еде, питье и сне.
 
-**Действия и способности.** Зомби теряет все особенности, позволяющие сотворять заклинания. и любые действия, создающие магические эффекты.
+**Магические способности.** Скелет теряет все заклинательные характеристики и любые действия, создающие магические эффекты.
 
 **Действия.** Зомби может получить атаки захвата и укуса зомби, если базовое существо обладает способностью захвата и укуса. Если у существа есть мультиатака, оно может заменить атаки оружием в своей мультиатаке на захват или укус. Обе атаки используют силу для атаки и бросков урона. Захват наносит 1к6 дробящего урона плюс 1к6 за каждую категорию размера выше среднего. Укус наносит 1к10 колющего урона плюс 1к10 за каждую категорию размера выше среднего. КС побега при захвате зомби равен его КС приемов. Зомби теряет все дальнобойные атаки, требующие использования оружия сложнее камня. Он также теряет все легендарные действия и бонусные действия.
