--- a/src/content/posts/core-d20/cored20rpg-spell-tiny-hut-fix.mdx
+++ b/src/content/posts/core-d20/cored20rpg-spell-tiny-hut-fix.mdx
@@ -12,28 +12,27 @@ tags:
 
 Леомундова хижина всегда предназначалась для создания комфортных условий для отдыха и не должна была давать защиту от магии. Приведенная ниже формулировка делает именно это - сохраняя функционал, который предполагается и убирая случайно попавший функционал заклинания.
 
-
-**КРОШЕЧНАЯ ХИЖИНА**
+### **КРОШЕЧНАЯ ХИЖИНА**
 
 *3-й круг, эвокация (ритуал), Волшебник, Бард, Чародей*
 
-**Время сотворения:** 1 действие
+**Время сотворения:** 1 минута
 
 **Дистанция:** на себя
 
 **Компоненты:** В, С, М (маленькая хрустальная бусина, которая разбивается после окончания действия заклинания)
-
 **Длительность:** 8 часов
 
 **Классы:** Бард, Волшебник, Чародей
 
-Неподвижная непрозрачная силовая сфера радиусом 20 футов любого цвета, который вы выберете, возникает вокруг вас и остается на месте в течение всего времени действия. Заклинание заканчивается раньше, если вы покидаете его область. Когда вы произносите заклинание, находясь на земле, половина сферы выступает из-под земли.
+Неподвижная непрозрачная силовая сфера **радиусом 20 футов** любого цвета, который вы выберете, возникает вокруг вас и остается на месте в течение всего времени действия. Заклинание заканчивается раньше, если вы покидаете его область. Сфера создаётся с центром на вас; та часть сферы, которая при этом должна пройти сквозь твёрдые предметы или сплошную массу типа земли, камня, стен или деревьев - существует внутри них, не повреждая их, и не взаимодействуя с ними.
+Вместе с вами в сферу могут поместиться до девяти других существ среднего или меньшего размера; они могут свободно входить в хижину и выходить из нее, не причиняя ей вреда.  В случае если в сферу зайдет существо Большого размера или количество существ среднего или меньшего размера станет больше 9, то действие заклинания прекращается.
 
-Вместе с вами в сферу могут поместиться до девяти других существ среднего или меньшего размера; они могут свободно входить в хижину и выходить из нее, не причиняя ей вреда. 
+**Атмосфера внутри помещения комфортная.** Хижина также обеспечивает защиту от стихий, таких как дождь, пыль и песчаные бури (в т.ч. созданные магией). Хижина выдерживает любой ветер менее ураганной силы, но ураганный ветер или более сильный (скорость ветра 75+ миль в час)  разрушает ее.
 
-Атмосфера внутри помещения комфортная. Хижина также обеспечивает защиту от стихий, таких как дождь, пыль и песчаные бури. Хижина выдерживает любой ветер менее ураганной силы, но ураган (скорость ветра 75+ миль в час) или более сильная сила разрушает ее.
-Пока заклинание не закончится, вы можете приказать интерьеру стать тускло освещенным или темным. Сфера непрозрачна снаружи, но прозрачна изнутри. Снаряды, оружие и большинство эффектов заклинаний проходят через хижину, не влияя на нее, хотя ее обитателей нельзя увидеть снаружи (они находятся в полном укрытии).
+Пока заклинание не закончится, вы можете приказать интерьеру стать тускло освещенным или темным. Сфера непрозрачна снаружи, но прозрачна изнутри. Снаряды, оружие и большинство эффектов заклинаний проходят через хижину, не влияя на нее, хотя ее обитателей нельзя увидеть снаружи (они находятся в полном укрытии). Исключение составляют заклинания, которые могут разрушать силовые эффекты (такие как дезинтеграция и стена силы).
 
+Заклинатель должен оставаться неподвижным относительно той плоскости, на которой он сотворяет это заклинание и эта плоскость по своим размерам должна значительно превосходить размеры сферы.
 Что вы думаете по поводу такого изменения заклинания?
 
 Напишите нам в [Телеграме](https://t.me/cyborgs_and_mages) или на нашем [Discord](https://discord.gg/yrJqvCqU3w) сервере.
