--- a/src/content/posts/articles/about-cr-20.mdx
+++ b/src/content/posts/articles/about-cr-20.mdx
@@ -17,3 +17,10 @@ author: DragnaCarta
 
 Открыть [Показатель опасности 2.0](https://www.gmbinder.com/share/-NvyddlwRAFQRNmVKrPW)
 
+---
+
+:arrow_forward: Также обратите внимание на статью Майка Ши [Что такое Показатель Опасности?](https://cyborgsandmages.com/posts/translations/sly-flourish-what-is-cr)
+
+:arrow_forward: Набросок правил Майкла Мирлза про балансировку столкновений используя Очки Опасности = [Как строить столкновения используя очки опасности](https://cyborgsandmages.com/posts/translations/mike-mearls-encounter-building-challenge-points) 
+
+:arrow_forward: И рекоменлации Злого ГМа - [Злой ГМ про то, как строить клевые энкаунтеры!](https://cyborgsandmages.com/posts/translations/angrygm-how-to-make-cool-encounters)
