--- a/src/content/posts/articles/mission-generator.mdx
+++ b/src/content/posts/articles/mission-generator.mdx
@@ -140,15 +140,15 @@ tags:
 
 ### 1. Штурм/рейд
 
-Вы должны атаковать и убить/забрать макгаффина
+1. Вы должны атаковать и убить/забрать макгаффина
 
-Вы должны защищать строение, которое кто-то планирует атаковать
+1. Вы должны защищать строение, которое кто-то планирует атаковать
 
-Вы атакуете строение, но «жертвы» приветствуют вас
+1. Вы атакуете строение, но «жертвы» приветствуют вас
 
-Вы нападаете на строение, и жертвы приветствуют вас, но затем пытаются вас убить.
+1. Вы нападаете на строение, и жертвы приветствуют вас, но затем пытаются вас убить.
 
-Нападение имеет долгосрочные последствия
+1. Нападение имеет долгосрочные последствия
 
 ### 2. Извлечение (Добровольное/Принудительное)
 
