--- a/src/content/posts/articles/waterdeep-resources.mdx
+++ b/src/content/posts/articles/waterdeep-resources.mdx
@@ -16,9 +16,9 @@ tags:
 
 ### 2 Карты
 
-[**https://forgotten**](https://forgotten) **maps.web.app/map/Waterdeep**
+[Waterdeep Map ](https://forgottenmaps.web.app/map/Waterdeep)
 
-[**https://www.aidedd.org/atlas/index.php?map=W&l=1**](https://www.aidedd.org/atlas/index.php?map=W&l=1)
+[Waterdeep Map 2](https://www.aidedd.org/atlas/index.php?map=W&l=1)
 
 [**https://www.worldanvil.com/w/not-forgotten-realms-palant/map/6aef896a-6fad-4c04-95e7-d12ec0be5898**](https://www.worldanvil.com/w/not-forgotten-realms-palant/map/6aef896a-6fad-4c04-95e7-d12ec0be5898)
 
@@ -38,13 +38,10 @@ tags:
 
 [Waterdeep in tables](http://НАШИ МАТЕРИАЛЫ Газеты Глубоководья 06.10.2019 - by Anton Palikhov https://www.dmsguild.com/product/290786/Broadsheets-of-Waterdeep?affiliate_id=759617)
 
-### Примеры газет с шаблонами файлов
+[Примеры газет с шаблонами файлов](https://cyborgsandmages.com/2019/03/gazety-glubokovodya-shablony-i-primer/)
 
-[https://cyborgsandmages.com/2019/03/gazety-glubokovodya-shablony-i-primer/](https://cyborgsandmages.com/2019/03/gazety-glubokovodya-shablony-i-primer/)
+[Газеты Глубоководья](https://cyborgsandmages.com/2019/10/broadsheets/)
 
-### Газеты Глубоководья
-
-[https://cyborgsandmages.com/2019/10/broadsheets/](https://cyborgsandmages.com/2019/10/broadsheets/)
 
 [**PALANT WORK WATERDEEP LOCATIONS REFERENCE GUIDE**](https://docs.google.com/spreadsheets/d/1hUcmIlW6XKvzR-8WQ1Jvtc0-_xhUrrugKF5_vUoeDNc/)
 
