--- a/src/content/posts/articles/xethmar-1.mdx
+++ b/src/content/posts/articles/xethmar-1.mdx
@@ -1,9 +1,9 @@
 ---
-title: Зетамар - маготехнический сеттинг
-description: АВТОРСКАЯ СТАТЬЯ Вводное описание домашнего сеттинга Киборгов и Чародеев - Зетамара, мира в котором сплетаются воедино магия и технология
+title: Марванг - маготехнический сеттинг
+description: АВТОРСКАЯ СТАТЬЯ Вводное описание домашнего сеттинга Киборгов и Чародеев - Марванга, мира в котором сплетаются воедино магия и технология
 date: '2023-10-23'
 tags:
-  - Зетамар
+  - Марванг
   - Сеттинг
   - Core d20 RPG
   - D&D 5e
@@ -12,7 +12,7 @@ tags:
   - магитех
 ---
 
-> **Зетамар**
+> **Марванг**
 >
 > _Сплав технологии и магии во вновь познаваемом мире_
 >
@@ -49,8 +49,8 @@ tags:
 - реликвии, оставшиеся от времен Первой империи и энерго-кристаллы, необходимые для их работы;
 - легенды про Спящего и создание им Хранителей.
 
-[СТРАНИЦА НА WORLD ANVIL](https://www.worldanvil.com/w/xethamar-palant)
+[СТРАНИЦА НА WORLD ANVIL](https://www.worldanvil.com/w/marwang-palant)
 
 ---
 
-## ПРОЧИЕ СТАТЬИ ПРО ЗЕТАМАР
+## ПРОЧИЕ СТАТЬИ ПРО Марванг
