--- a/src/content/posts/translations/foliant-of-war-part-2.mdx
+++ b/src/content/posts/translations/foliant-of-war-part-2.mdx
@@ -9,7 +9,8 @@ tags:
   - Снаряжение
   - D&D 5e
   - Core d20 RPG
-author: unknown
+  - Tome of Warfare
+author: Tome of Warfare
 translator: Олег Байков
 ---
 
