--- a/src/content/posts/translations/tome-of-warfare-4-martial-weapons.mdx
+++ b/src/content/posts/translations/tome-of-warfare-4-martial-weapons.mdx
@@ -1,15 +1,15 @@
 ---
-title: Фолиант Войны - Глава 3 - Воинское оружие. Древковое. Топоры. Молоты и кирки
-description: ПЕРЕВОД части книги, посвященной снаряжению, а именно простому оружию в пятой редакции. Перевод дополнительно хорош иллюстрациями, которые добавил переводчик.
+title: 'Фолиант Войны - Глава 3 - Воинское оружие. Древковое. Топоры. Молоты и кирки'
+description: 'ПЕРЕВОД части книги, посвященной снаряжению, а именно простому оружию в пятой редакции. Перевод дополнительно хорош иллюстрациями, которые добавил переводчик.'
 date: '2024-03-23'
 tags:
-  - перевод
-  - Оружие
-  - Снаряжение
-  - D&D 5e
-  - Core d20 RPG
-  - Tome of Warfare
-author: Tome of Warfare
+  - 'перевод'
+  - 'Оружие'
+  - 'Снаряжение'
+  - 'D&D 5e'
+  - 'Core d20 RPG'
+  - 'Tome of Warfare'
+author: 'Tome of Warfare'
 translator: Олег Байков
 ---
 
