--- a/src/content/posts/translations/tome-of-warfare-part-3-simple-weapons.mdx
+++ b/src/content/posts/translations/tome-of-warfare-part-3-simple-weapons.mdx
@@ -3,13 +3,13 @@ title: Фолиант Войны - Глава 3 - Оружие
 description: ПЕРЕВОД части книги, посвященной снаряжению, а именно простому оружию в пятой редакции. Перевод дополнительно хорош иллюстрациями, которые добавил переводчик.
 date: '2024-03-01'
 tags:
-  - перевод
-  - Оружие
-  - Снаряжение
-  - D&D 5e
-  - Core d20 RPG
-  - Tome of Warfare
-author: unknown
+  - 'перевод'
+  - 'Оружие'
+  - 'Снаряжение'
+  - 'D&D 5e'
+  - 'Core d20 RPG'
+  - 'Tome of Warfare'
+author: 'Tome of Warfare'
 translator: Олег Байков
 ---
 
