--- a/src/content/posts/translations/tome-of-warfare-3-martial-weapons.mdx
+++ b/src/content/posts/translations/tome-of-warfare-3-martial-weapons.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Фолиант Войны - Глава 3 - Воинское оружие. Кулачное. Мечи.'
-description: 'ПЕРЕВОД части книги, посвященной снаряжению, а именно простому оружию в пятой редакции. Перевод дополнительно хорош иллюстрациями, которые добавил переводчик.''
+description: 'ПЕРЕВОД части книги, посвященной снаряжению, а именно простому оружию в пятой редакции. Перевод дополнительно хорош иллюстрациями, которые добавил переводчик.'
 date: '2024-03-13'
 tags:
   - 'перевод'
