--- a/src/content/posts/translations/foliant-of-war-part-2.mdx
+++ b/src/content/posts/translations/foliant-of-war-part-2.mdx
@@ -1,17 +1,17 @@
 ---
-title: Фолиант Войны - Глава 2 Опции Мастера. Доспехи и Щиты.
-description: ПЕРЕВОД части книги, посвященной снаряжению, а именно доспехам и щитам в пятой редакции. Перевод дополнительно хорош иллюстрациями, которые добавил переводчик.
+title: 'Фолиант Войны - Глава 2 Опции Мастера. Доспехи и Щиты.'
+description: 'ПЕРЕВОД части книги, посвященной снаряжению, а именно доспехам и щитам в пятой редакции. Перевод дополнительно хорош иллюстрациями, которые добавил переводчик.'
 date: '2024-02-20'
 tags:
-  - перевод
-  - Доспехи
-  - Щиты
-  - Снаряжение
-  - D&D 5e
-  - Core d20 RPG
-  - Tome of Warfare
-author: Tome of Warfare
-translator: Олег Байков
+  - 'перевод'
+  - 'Доспехи'
+  - 'Щиты'
+  - 'Снаряжение'
+  - 'D&D 5e'
+  - 'Core d20 RPG'
+  - 'Tome of Warfare'
+author: 'Tome of Warfare'
+translator: 'Олег Байков'
 ---
 
 > Этот перевод Tome of Warfare весьма хорош - особенно за счет иллюстраций от переводчика.
