--- a/src/content/posts/translations/tome-of-warfare-5-martial-weapons.mdx
+++ b/src/content/posts/translations/tome-of-warfare-5-martial-weapons.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Фолиант Войны. Воинское Оружие ч3. Дробящее. Персональное. Другое. Дальнего боя.'
-description: 'ПЕРЕВОД части книги, посвященной снаряжению, а именно Воинскому оружию в пятой редакции. Перевод дополнительно хорош иллюстрациями, которые добавил переводчик.''
+description: 'ПЕРЕВОД части книги, посвященной снаряжению, а именно Воинскому оружию в пятой редакции. Перевод дополнительно хорош иллюстрациями, которые добавил переводчик.'
 date: '2024-05-02'
 tags:
   - 'перевод'
