--- a/src/content/posts/translations/tome-of-warfare-part-3-simple-weapons.mdx
+++ b/src/content/posts/translations/tome-of-warfare-part-3-simple-weapons.mdx
@@ -1,6 +1,6 @@
 ---
-title: Фолиант Войны - Глава 3 - Оружие
-description: ПЕРЕВОД части книги, посвященной снаряжению, а именно простому оружию в пятой редакции. Перевод дополнительно хорош иллюстрациями, которые добавил переводчик.
+title: 'Фолиант Войны - Глава 3 - Оружие'
+description: 'ПЕРЕВОД части книги, посвященной снаряжению, а именно простому оружию в пятой редакции. Перевод дополнительно хорош иллюстрациями, которые добавил переводчик.'
 date: '2024-03-01'
 tags:
   - 'перевод'
