--- a/src/content/singles/index-1.mdx
+++ b/src/content/singles/index-1.mdx
@@ -3,55 +3,55 @@ title: Страницы сайта
 description: Страницы сайта
 ---
 
-[RSS](https://cyborgsandmages.com/rss.xml)
+[RSS](/rss.xml)
 
 [Создатель чудовищ](https://monstermaker.cyborgsandmages.com/)
 
 ## СТРАНИЦЫ
 
-[CORE D20 RPG](https://cyborgsandmages.com/cored20rpg)
+[CORE D20 RPG](/cored20rpg)
 
-[Перевод SRD](https://cyborgsandmages.com/srd-translate)
+[Ресурсы](/resources)
 
-[Ресурсы](https://cyborgsandmages.com/resources)
+[Полезные загрузки](/downloads)
 
-[Полезные загрузки](https://cyborgsandmages.com/downloads)
+[КНИГИ](/books)
 
-[КНИГИ](https://cyborgsandmages.com/books)
+[Руководство Foundry ](/foundry-guide)
 
-[Руководство Foundry ](https://cyborgsandmages.com/foundry-guide)
+[Руководство Roll20](/roll20-guide)
 
-[Руководство Roll20](https://cyborgsandmages.com/roll20-guide)
+[Lazy DM Resource document](/lazydm-resource-document-ru)
 
-[Lazy DM Resource document](https://cyborgsandmages.com/lazydm-resource-document-ru)
+[Наши материалы на dmsguild.com](/online=shops)
 
-[Наши материалы на dmsguild.com](https://cyborgsandmages.com/online=shops)
+[Поддержать проект](/support-us)
 
-[Поддержать проект](https://cyborgsandmages.com/support-us)
+[Связаться с нами](/contact-us)
 
-[Связаться с нами](https://cyborgsandmages.com/contact-us)
+[Полезные ссылки](/links)
 
-[Полезные ссылки](https://cyborgsandmages.com/links)
+[Друзья](/friends)
 
-[Друзья](https://cyborgsandmages.com/friends)
+[Перевод SRD](/srd-translate)
 
 ## КАТЕГОРИИ
 
 [СТАТЬИ](/articles/1)
 
-[Core d20](https://cyborgsandmages.com/core-d20/1)
+[Core d20](/core-d20/1)
 
-[CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/1)
+[CORE D20 RPG](/cored20rpg/1)
 
-[FORGOTTEN REALMS](https://cyborgsandmages.com/forgotten-realms/1)
+[Забытые Королевства](/forgotten-realms/1)
 
-[MARWANG](https://cyborgsandmages.com/marwang/1)
+[Марванг](/marwang/1)
 
-[SAGE ADVICE](https://cyborgsandmages.com/sage-advice/1)
+[SAGE ADVICE](/sage-advice/1)
 
-[SRD](https://cyborgsandmages.com/srd/1)
+[SRD](/srd/1)
 
-[ПЕРЕВОДЫ](https://cyborgsandmages.com/translations/1)
+[ПЕРЕВОДЫ](/translations/1)
 
 ## Индексы материалов
 
@@ -63,4 +63,4 @@ description: Страницы сайта
 
 [Индекс статей по работе сайта](/posts/articles/docs-index)
 
-[Индекс справочных материалов доступных онлайн](https://cyborgsandmages.com/reference-index)
+[Индекс справочных материалов доступных онлайн](/reference-index)
