--- a/src/content/singles/srd-translate.mdx
+++ b/src/content/singles/srd-translate.mdx
@@ -30,12 +30,6 @@ date: 2023-08-07
 
 ## ЛИЦЕНЗИЯ
 
-## СОВМЕСТИМОСТЬ С ДРУГИМИ ПЕРЕВОДАМИ
-
-### Hobby World
-
-### Phantom Studio, Dungeons.ru
-
 ## ПОЛИТИКА ПО ВНЕСЕНИЮ ИЗМЕНЕНИЙ В ПЕРЕВОД SRD
 
 ### Терминология
@@ -60,7 +54,7 @@ date: 2023-08-07
 
 Вы получаете временные хиты.
 
-Вы совершаете проверку характеристики, и она либо успешна, либо нет.
+Вы совершаете проверку способности, и она либо успешна, либо нет.
 
 Вы совершаете спасбросок, и он успешен или нет.
 
