--- a/src/content/posts/articles/mission-generator.mdx
+++ b/src/content/posts/articles/mission-generator.mdx
@@ -152,125 +152,148 @@ tags:
 
 ### 2. Извлечение (Добровольное/Принудительное)
 
-1. Вы должны восстановить или вернуть макгаффин
+Вы должны восстановить или вернуть макгаффин
 
-1. Вы должны вставить или поместить макгаффин в целевую область
+Вы должны вставить или поместить макгаффин в целевую область
 
-1. Вы макгаффин, которого нужно вернуть
+Вы макгаффин, которого нужно вернуть
 
-1. Вы идете к макгаффину, и они хотят остаться, или вы видите причину, по которой получить его было бы плохо.
+Вы идете к макгаффину, и они хотят остаться, или вы видите причину, по которой получить его было бы плохо.
 
-1. Вы идете к макгаффинам, а они хотят остаться, потому что просто хотели выявить слабости там, где они есть (или каким-то другим способом, помогая своим похитителям).
+Вы идете к макгаффинам, а они хотят остаться, потому что просто хотели выявить слабости там, где они есть (или каким-то другим способом, помогая своим похитителям).
 
-1. Вы идете к макгаффину и решаете, что получить его было бы плохо, но на самом деле плохо не получить его, потому что вас дезинформировали.
+Вы идете к макгаффину и решаете, что получить его было бы плохо, но на самом деле плохо не получить его, потому что вас дезинформировали.
 
-1. Макгаффина нет и не было
+Макгаффина нет и не было
 
-1. Макгаффин удивительно трудно получить
+Maguffin удивительно трудно получить
 
 ### 3. Кража
 
-1. Вы должны украсть макгаффин
+Вы должны украсть макгаффин
 
-1. Вы должны защитить макгаффин от кражи
+Вы должны защитить макгаффин от кражи
 
-1. Когда вы идете, чтобы украсть макгаффин, это не их или не то, что вы ожидали
+Когда вы идете, чтобы украсть макгаффин, это не их или не то, что вы ожидали
 
-1. То же, что и выше, за исключением того, что это тайно (иллюзия, секретное отделение)
+То же, что и выше, за исключением того, что это тайно (иллюзия, секретное отделение)
 
-1. Вы идете украсть предмет и обнаруживаете, что владельцы рады с ним расстаться или макгаффин хочет, чтобы его украли.
+Вы идете украсть предмет и обнаруживаете, что владельцы рады с ним расстаться или макгаффин хочет, чтобы его украли.
 
-1. Нет сокровищ, которые можно было бы украсть
+Нет сокровищ, которые можно было бы украсть
 
 ### 4. Награда за голову
 
-1. Вам платят за убийство существа
+Вам платят за убийство существа
 
-1. Вам платят за то, что вы не даете людям браконьерствовать или убивать существо
+Вам платят за то, что вы не даете людям браконьерствовать или убивать существо
 
-1. Награда за твою голову
+Награда за твою голову
 
-1. Существо или награда являются вымышленными
+Существо или награда являются вымышленными
 
-1. Никто не верит, что существо все еще существует, но оно существует
+Никто не верит, что существо все еще существует, но оно существует
 
-1. Награда за существо очень высока, после убийства многих из них становятся известны последствия для экосистемы
+Награда за существо очень высока, после убийства многих из них становятся известны последствия для экосистемы
 
 ### 5. Сопровождение
 
-1. Вы должны сопровождать макгаффина до места назначения
+Вы должны сопровождать макгаффина до места назначения
 
-1. Вы тот человек, которого нужно сопровождать
+Вы тот человек, которого нужно сопровождать
 
-1. Что-то повлияло на пункт назначения, что делает завершение миссии невозможным.
+Что-то повлияло на пункт назначения, что делает завершение миссии невозможным.
 
-1. Макгаффин не то, чем кажется, что делает доставку невозможной
+Макгаффин не то, чем кажется, что делает доставку невозможной
 
 ### 6. Переворот
 
-1. Вы должны свергнуть человека, находящегося у власти
+Вы должны свергнуть человека, находящегося у власти
 
-1. Вы человек у власти, которого кто-то пытается свергнуть
+Вы человек у власти, которого кто-то пытается свергнуть
 
-1. Человек у власти на самом деле тот, кто должен быть
+Человек у власти на самом деле тот, кто должен быть
 
-1. Человек у власти - это тот, кто нанял вас, чтобы свергнуть его
+Человек у власти - это тот, кто нанял вас, чтобы свергнуть его
 
-1. Вам не нужно смещать человека у власти из-за его новой должности
+Вам не нужно смещать человека у власти из-за его новой должности
 
-1. Выполнение государственного переворота дестабилизирует регион, а его последствия меняют форму кампании.
+Выполнение государственного переворота дестабилизирует регион, а его последствия меняют форму кампании.
 
 ### 7. Дуэль/Состязание
 
-1. Вы должны победить противника
-2. Кто-то пытается остановить или победить вас
-3. Ваш противник бросает спичку
-4. Ваш оппонент проигрывает, пока он добивается своей цели, пока вы с ним связаны
-5. Конкурс вызван из-за погоды
-6. Соревнование не обязательно должно происходить из-за других событий, которые ставят вас и вашего оппонента на одну сторону.
+Вы должны победить противника
+
+Кто-то пытается остановить или победить вас
+
+Ваш противник бросает спичку
+
+Ваш оппонент проигрывает, пока он добивается своей цели, пока вы с ним связаны
+
+Конкурс вызван из-за погоды
+
+Соревнование не обязательно должно происходить из-за других событий, которые ставят вас и вашего оппонента на одну сторону.
 
 ### 8. Убийство
 
-1. Вы должны убить цель
-2. Люди взяли контракт на вашу жизнь
-3. Человек платит вам за то, чтобы вы его убили
-4. Человек платит вам за его убийство, но на самом деле находится под контролем врагов игроков.
-5. Когда вы идете их убивать, они удаляются другим способом как препятствие (или, возможно, они оставляют основной материал), что означает, что их больше не нужно убивать.
-6. Убийство вашей цели вызывает больше проблем, чем решает
+Вы должны убить цель
+
+Люди взяли контракт на вашу жизнь
+
+Человек платит вам за то, чтобы вы его убили
+
+Человек платит вам за его убийство, но на самом деле находится под контролем врагов игроков.
+
+Когда вы идете их убивать, они удаляются другим способом как препятствие (или, возможно, они оставляют основной материал), что означает, что их больше не нужно убивать.
+
+Убийство вашей цели вызывает больше проблем, чем решает
 
 ### 9. Саботаж
 
-1. Вы должны саботировать цель
-2. Вы должны защитить цель от саботажа
-3. Есть нерабочее устройство, которое необходимо отремонтировать
-4. Цель, которую вы намереваетесь саботировать, уже нефункциональна
-5. Нефункциональная цель на самом деле всего лишь уловка, реальная опасность исходит из другого предполагаемого источника.
-6. Цель, предназначенная для саботажа, терпит неудачу сама по себе по совершенно разным причинам.
-7. Саботирование цели на самом деле затрудняет достижение ваших собственных целей.
+Вы должны саботировать цель
+
+Вы должны защитить цель от саботажа
+
+Есть нерабочее устройство, которое необходимо отремонтировать
+
+Цель, которую вы намереваетесь саботировать, уже нефункциональна
+
+Нефункциональная цель на самом деле всего лишь уловка, реальная опасность исходит из другого предполагаемого источника.
+
+Цель, предназначенная для саботажа, терпит неудачу сама по себе по совершенно разным причинам.
+
+Саботирование цели на самом деле затрудняет достижение ваших собственных целей.
 
 ### 10. Разведка
 
-1. Вы должны исследовать область
+Вы должны исследовать область
 
-1. Вы должны помешать группе узнать о районе
+Вы должны помешать группе узнать о районе
 
-1. Вы намереваетесь исследовать область, но обнаруживаете, что она уже хорошо нанесена на карту.
+Вы намереваетесь исследовать область, но обнаруживаете, что она уже хорошо нанесена на карту.
 
-1. Вы обнаруживаете хорошо нанесенную на карту область, которую намеревались исследовать, но обнаруживаете, что все карты очень неточны.
+Вы обнаруживаете хорошо нанесенную на карту область, которую намеревались исследовать, но обнаруживаете, что все карты очень неточны.
 
 ### 11. Тайны
 
-1. Вы должны разгадать тайну
-2. Вы должны помешать кому-либо узнать, что вы сделали
-3. Вы намереваетесь разгадать тайну, но решение легко находится.
-4. Знание этого вызывает совершенно новый набор проблем
-5. Что-то случилось с очевидным решением, внимательное изучение покажет, что, возможно, очевидное решение неверно.
-6. То, что кажется загадкой, явно не является при рассмотрении
+Вы должны разгадать тайну
+
+Вы должны помешать кому-либо узнать, что вы сделали
+
+Вы намереваетесь разгадать тайну, но решение легко находится. Знание этого вызывает совершенно новый набор проблем
+
+Что-то случилось с очевидным решением, внимательное изучение покажет, что, возможно, очевидное решение неверно.
+
+То, что кажется загадкой, явно не является при рассмотрении
 
 ### 12. Навык
 
-1. Ваши навыки или работа проверены
-2. Вам нужно нанять людей для проекта
-3. Вы взялись за дело, но оказалось, что есть проблемы посерьезнее
-4. Большие проблемы требуют другого навыка, которым вы обладаете.
-5. Получается, что квалифицированный специалист был вовсе не нужен.
+Ваши навыки или работа проверены
+
+Вам нужно нанять людей для проекта
+
+Вы взялись за дело, но оказалось, что есть проблемы посерьезнее
+
+Большие проблемы требуют другого навыка, которым вы обладаете.
+
+Получается, что квалифицированный специалист был вовсе не нужен.
