--- a/src/content/posts/core-d20/cored20rpg-bestiary-feats-for-creatures.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-feats-for-creatures.mdx
@@ -2,6 +2,7 @@
 title: Core d20 RPG - Бестиарий - Классовые шаблоны
 description: Core d20 RPG - Бестиарий - Классовые шаблоны
 date: 2024-04-30 08:00
+draft: true
 tags:
   - Черты
   - Core d20 RPG
