--- a/src/content/posts/core-d20/cored20-new-mechanics-1.mdx
+++ b/src/content/posts/core-d20/cored20-new-mechanics-1.mdx
@@ -16,7 +16,7 @@ tags:
 
 ## Негативный уровень
 
-Существо получившее 1 негатиавный уровень получает следующие штрафы:
+Существо получившее 1 негативный уровень получает следующие штрафы:
 
 - -1 к всем проверкам навыков, характеристик, спасброскам и броскам атаки
 - максимальное количество хитов существа уменьшается на значение равное среднему значению Кости Хитов существа плюс модификатор Телосложения
